--- a/.github/workflows/sca-scan.yml
+++ b/.github/workflows/sca-scan.yml
@@ -1,7 +1,7 @@
 name: Source Composition Analysis Scan
-on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+on: push
+  #pull_request:
+    #types: [opened, synchronize, reopened]
 jobs:
   security:
     runs-on: ubuntu-latest
